// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Breadcrumb.Item /> renders correctly when an href prop is passed 1`] = `
.c0 {
  font-size: 12px;
  overflow-wrap: break-word;
  word-wrap: break-word;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  color: rgba(2,108,223,1);
  -webkit-text-decoration: none;
  text-decoration: none;
}

<li
  itemProp="itemListElement"
  itemScope={true}
  itemType="http://schema.org/ListItem"
  style={
    Object {
      "whiteSpace": "nowrap",
    }
  }
>
  <a
    className="c0"
    color=""
    fontSize="12px"
    href="/"
    itemProp="item"
    rel="_self"
    target=""
  >
    Home
  </a>
  <meta
    content="Home"
    itemProp="name"
  />
  <meta
    content="1"
    itemProp="position"
  />
</li>
`;

exports[`<Breadcrumb.Item /> renders correctly when no href prop is passed 1`] = `
.c0 {
  font-size: 12px;
  overflow-wrap: break-word;
  word-wrap: break-word;
  word-break: break-word;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

<li
  itemProp="itemListElement"
  itemScope={true}
  itemType="http://schema.org/ListItem"
  style={
    Object {
      "whiteSpace": "nowrap",
    }
  }
>
  <span
    className="c0"
    fontSize="12px"
    href={null}
    itemProp="item"
  >
    Home
  </span>
  <meta
    content="Home"
    itemProp="name"
  />
  <meta
    content="1"
    itemProp="position"
  />
</li>
`;
